Fix text position for center aligned cover image block

--- a/assets/css/blocks.css
+++ b/assets/css/blocks.css
@@ -1,3 +1,7 @@
+.wp-block-cover-image.aligncenter {
+	display: flex;
+}
+
 /* Specific styles for Gutenberg blocks */
 @media screen and (min-width: 48em) {
 	/**
